--- a/labs/04_unit_test_automation/pipeline.yaml
+++ b/labs/04_unit_test_automation/pipeline.yaml
@@ -38,8 +38,10 @@ spec:
       taskRef:
         name: flake8
       params:
-      - name: message
-        value: "Calling Flake8 linter..."
+      - name: image
+        value: "python:3.9-slim"
+      - name: args
+        value: ["--count", "--max-complexity=10", "--max-line-length=127", "--statistics"]
       runAfter:
         - clone
 
