Reference the buildah Task

--- a/labs/05_build_an_image/pipeline.yaml
+++ b/labs/05_build_an_image/pipeline.yaml
@@ -62,7 +62,8 @@ spec:
         - name: source
           workspace: pipeline-workspace
       taskRef:
-        name: echo
+        name: buildah
+        kind: ClusterTask
       params:
       - name: message
         value: "Building image for $(params.repo-url) ..."
