Update the Pipeline parameters

--- a/labs/06_deploy_to_kubernetes/pipeline.yaml
+++ b/labs/06_deploy_to_kubernetes/pipeline.yaml
@@ -7,6 +7,7 @@ spec:
     - name: pipeline-workspace
   params:
     - name: build-image
+    - name: app-name
     - name: repo-url
     - name: branch
       default: master
